Update URLs for GitHub Pages hosting

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 
 # Base URL configuration (will be updated automatically by GitHub)
 baseurl: ""
-url: "https://yourusername.github.io"
+url: "https://Noohkh.github.io"
 
 # Repository name (update this with your actual repo name)
-repository: "yourusername/recipe-finder"
+repository: "Noohkh/mykitchen-recipes"
 
 # GitHub Pages settings
 title: "MyKitchen Recipe Finder"
